# rust-api-demo

./: README.md  data.csv  gendata.pl
fast-mem-api/: Cargo.toml
fast-mem-api/src/: db.rs  handlers.rs  main.rs
