[package]
name = "fast-mem-api"
version = "0.1.0"
authors = ["Eduardo Díaz <ediaz@dcc8090.cl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
rand = "0.7.3"
serde = "1.0.114"
serde_json = "1.0.56"
csv="1.1.3"
futures = "0.3.5"
jsonwebtoken = "7.2.0"
dotenv = "0.15.0"